--- a/MySQL/基础.md
+++ b/MySQL/基础.md
@@ -1,1 +1,501 @@
-23123
+## 1.拼接字符串CONCAT
+
+```mysql
+SELECT CONCAT(last_name,'_',first_name) FROM employees;
+```
+
+## 2.去除重复项distinct
+
+```mysql
+#需求：查询员工涉及到的部门编号有哪些？
+SELECT DISTINCT department_id FROM employees;
+```
+
+## 3.IFNULL
+
+
+
+## 4.条件查询
+
+```mysql
+select 查询列表
+from 表名
+where 筛选条件
+```
+
+执行顺序：
+
+1. from子句
+2. where子句
+3. select子句
+
+模糊查询
+
+```mysql
+#like，一般与通配符搭配使用，对字符型数据进行部分匹配查询
+#常见通配符:_单个字符 %任意多个字符
+SELECT *
+FROM employees
+WHERE last_name LIKE '%a%';
+
+#in 查询某字段的值是否属于指定列表之内
+#例：查询部门编号为30/50/90的员工信息
+SELECT last_name,department_id
+FROM employees
+WHERE department_id IN(30,50,90);
+
+#IS NULL
+#查询没有奖金的员工
+SELECT * 
+FROM employees
+WHERE commission_pct IS NULL;
+```
+
+## 5.排序查询
+
+```mysql
+select 查询列表
+from 表名
+where 筛选条件
+order by 排序列表
+排序列表可以是单个字段、多个字段、表达式、函数、列表、以及上述组合
+升序 asc 默认
+降序 desc
+```
+
+执行顺序：
+
+1. from子句
+2. where子句
+3. select子句
+4. order by子句
+
+## 6.字符函数
+
+1. concat拼接字符
+2. LENGHT获取字节长度
+3. CHAR_LENGTH获取字符长度
+4. SUBSTRING截取子串
+5. INSTR获取字符第一次出现的索引
+6. TRIM去前后指定的字符
+7. LPAD/RPAD左右填充
+
+## 7.聚合函数
+
+sum(字段名)：求和
+
+avg（字段名）：平均数
+
+max
+
+min
+
+count（字段名）：计算非空字段的个数
+
+## 8.分组查询
+
+执行顺序
+
+1. from子句
+2. where子句
+3. order by
+4. select
+5. having
+6. order by子句
+
+```mysql
+#分组查询
+#语法
+select 查询列表
+from 表名
+where 筛选条件
+group by 分组列表
+
+#例：查询每个部门的工资和
+SELECT department_id, SUM(salary)
+FROM employees
+GROUP BY department_id;
+
+#分组前筛选
+#案例1：查询每个工种的员工平均工资
+SELECT AVG(salary), job_id
+FROM employees
+GROUP BY job_id;
+
+#案例2：查询每个领导的手下人数
+SELECT COUNT(*), manager_id
+FROM employees
+WHERE manager_id IS NOT NULL
+GROUP BY manager_id;
+
+#分组后筛选
+#案例1：查询哪个部门的员工个数大于5
+#分析1：先查询每个部门的员工个数
+SELECT COUNT(*) 员工个数, department_id
+FROM employees
+GROUP BY department_id;
+#分析2：在刚才的基础上筛选大于5的
+SELECT COUNT(*) 员工个数, department_id
+FROM employees
+GROUP BY department_id
+HAVING COUNT(*) > 5;
+
+#案例2：求每个工种有奖金的员工的最高工资大于12000的工种编号和最高工资
+SELECT job_id, MAX(salary)
+FROM employees
+WHERE commission_pct IS NOT NULL
+GROUP BY job_id
+HAVING MAX(salary) > 12000
+
+#案例4：查询每个工种有奖金的员工的最高工资大于6000的工种编号和最高工资，按最高工资排序
+SELECT MAX(salary), job_id
+FROM employees
+WHERE commission_pct IS NOT NULL
+GROUP BY job_id
+HAVING MAX(salary) > 6000
+ORDER BY salary;
+
+#多个字段进行分组
+#案例1：查询每个工种每个部门的最低工资，按工资降序
+SELECT MIN(salary), job_id, department_id
+FROM employees
+GROUP BY job_id, department_id
+ORDER BY MIN(salary);
+```
+
+## 9.连接查询
+
+含义：多表查询
+
+### SQL92语法
+
+#### 等值连接
+
+```mysql
+select 查询列表
+from 表名1,表名2,····
+where 等值连接的连接条件
+
+#等值连接
+#案例1：查询员工名和部门名
+SELECT last_name, department_name
+FROM employees e, departments d
+WHERE e.department_id = d.department_id;
+
+#添加筛选条件
+#案例1：查询部门编号大于100的部门名和所在城市名
+SELECT d.department_id, d.department_name, l.city
+FROM departments d, locations l
+WHERE department_id > 100 and d.location_id = l.location_id;
+
+#案例2：查询有奖金的员工名、部门名
+SELECT e.last_name, d.department_name, e.commission_pct
+FROM employees e, departments d
+WHERE e.department_id = d.department_id
+AND e.commission_pct IS NOT NULL;
+
+#案例3：查询城市名中第二个字符为o的部门名和城市名
+SELECT d.department_name, l.city
+FROM departments d, locations l
+WHERE d.location_id = l.location_id
+AND l.city LIKE '_o%';
+```
+
+
+
+#### 非等值连接
+
+```mysql
+#案例1：查询员工
+```
+
+#### 自连接
+
+```mysql
+#自连接
+#案例1：查询员工名和领导名
+SELECT e.employee_id 员工id,e.last_name 员工名, m.employee_id 领导id, m.last_name 领导名
+FROM employees e,employees m
+WHERE e.manager_id = m.employee_id;
+```
+
+### SQL99语法
+
+```mysql
+#语法：
+select 查询列表
+from 表1 【连接类型】
+join 表2
+on 连接条件
+where 筛选条件
+group by 分组
+having 筛选条件
+order by 排序列表
+```
+
+连接类型：inner、left、right、full、cross
+
+#### 内连接inner
+
+##### 等值连接
+
+```mysql
+#语法：
+select 查询列表
+from 表1 别名 inner
+join 表2 别名
+on 连接条件
+where 筛选条件
+group by 分组
+having 筛选条件
+order by 排序列表；
+
+#等值连接
+#案例1：查询员工名、部门名
+SELECT e.last_name,d.department_name
+FROM departments d
+INNER JOIN employees e
+ON d.department_id = e.department_id;
+
+#案例2：查询名字中包含e的员工名和工种名
+SELECT e.last_name, j.job_title
+FROM employees e
+INNER JOIN jobs j
+ON e.job_id = j.job_id
+WHERE e.last_name LIKE '%e%';
+
+#案例3：查询部门个数大于3的城市名和部门个数（添加分组和筛选）
+SELECT COUNT(*) 部门个数, city
+FROM locations l
+INNER JOIN departments d
+ON l.location_id = d.location_id
+GROUP BY city
+HAVING COUNT(*) > 3
+
+#案例4：查询员工数大于3的部门和员工数，按个数降序
+SELECT COUNT(*) 员工数, d.department_name
+FROM departments d
+INNER JOIN employees e
+ON d.department_id = e.department_id
+GROUP BY d.department_id
+HAVING 员工数 > 3
+ORDER BY COUNT(*) DESC;
+
+#案例5：查询员工名、部门名、工种名，并按部门名降序
+SELECT e.last_name, d.department_name, j.job_title
+FROM employees e
+INNER JOIN departments d
+ON e.department_id = d.department_id
+INNER JOIN jobs j
+ON e.job_id = j.job_id
+ORDER BY department_name DESC;
+```
+
+##### 自连接
+
+```mysql
+#自连接
+#案例：查询员工名及其领导名
+SELECT
+	e.last_name 员工名,
+	m.last_name 领导名 
+FROM
+	employees e
+	INNER JOIN employees m ON e.manager_id = m.employee_id;
+```
+
+#### 外连接left/right
+
+特点：
+
+1. 外连接的查询结果为主表中的所有记录，如果从表中有和它匹配的，则显示匹配的值。如果表中没有和它匹配的，则显示null。外连接查询结果=内连接+主表中有而从表中没有的记录。
+
+```mysql
+#外连接
+#案例1：查询部门的员工数目(左外)
+SELECT
+	d.department_id,
+	d.department_name,
+	COUNT( * ) 员工数目 
+FROM
+	departments d
+	LEFT JOIN employees e ON d.department_id = e.department_id 
+GROUP BY
+	d.department_id;
+
+```
+
+#### 多表连接
+
+```mysql
+#多表连接
+#案例1：查询部门名为IT或SAL的员工信息
+SELECT
+	e.*,
+	d.department_name 
+FROM
+	employees e
+	LEFT JOIN departments d ON e.department_id = d.department_id 
+WHERE
+	d.department_name IN ( "IT", "SAL" );#案例2：查询没有部门的城市
+SELECT
+	l.*,
+	d.department_id 
+FROM
+	locations l
+	LEFT JOIN departments d ON d.location_id = l.location_id 
+WHERE
+	d.department_id IS NULL;
+```
+
+## 10.子查询
+
+含义：出现在其他语句中的select语句，子查询顺序先于主查询
+
+分类：
+
+1. 按子查询出现的位置分类
+   - select后面（仅仅支持标量子查询）
+   - from后面（支持表子查询）
+   - where或having后面（标量子查询、列子查询、行子查询）
+   - exists后面（相关子查询，表子查询）
+2. 按结果集的行列数不同：
+   - 标量子查询（结果集只有一行一列）
+   - 列子查询（结果集一列多行）
+   - 行子查询（结果集一行多列）
+   - 表子查询（结果集一般为多行多列）
+
+### 标量子查询
+
+```mysql
+#where或having后面
+#标量子查询
+#案例1：谁的工资比Abel高？
+#分析1：查询Abel的工资
+SELECT salary
+FROM employees
+WHERE last_name = 'Abel';
+#分析2：查询员工的信息，满足salary大于分析1的结果
+SELECT
+	last_name,
+	salary 
+FROM
+	employees 
+WHERE
+	salary > ( SELECT salary FROM employees WHERE last_name = 'Abel' ) 
+ORDER BY
+	salary ASC;
+	
+#案例2：查询job_id与141号员工相同。工资比143号员工多的员工姓名和job_id和工资
+#分析1：查询141号员工的job_id
+SELECT job_id
+FROM employees e
+WHERE e.employee_id=141
+
+#分析2：查询143号员工的工资
+SELECT salary
+FROM employees
+WHERE employee_id = 143
+
+#分析3：查询员工的姓名，job_id和工资，要求job_id等于分析1并且工资大于分析2
+SELECT job_id, salary,last_name
+FROM
+	employees 
+WHERE
+	job_id = ( SELECT job_id FROM employees e WHERE e.employee_id = 141 ) 
+	AND salary > ( SELECT salary FROM employees WHERE employee_id = 143 );
+	
+#案例3：查询公司工资最少的员工的last_name,job_id和salary
+#分析1：查询公司的最低工资
+SELECT
+	MIN( salary ) 
+FROM
+	employees 
+#分析2：查询last_name,job_id和salary，要求工资等于分析1
+SELECT
+	last_name,
+	job_id,
+	salary 
+FROM
+	employees 
+WHERE
+	salary = ( SELECT MIN( salary ) FROM employees );
+	
+#案例4：查询最低工资大于50号部门最低工资的部门id和其最低工资
+#分析1：查询50号部门的最低工资
+SELECT MIN(salary)
+FROM employees
+WHERE department_id = 50
+
+#分析2：查询每个部门的最低工资
+SELECT MIN(salary), department_id
+FROM employees
+GROUP BY department_id
+
+#分析3：查询最低工资大于分析1的部门id及其最低工资
+SELECT
+	department_id,
+	MIN( salary ) 
+FROM
+	employees 
+GROUP BY
+	department_id 
+HAVING
+	MIN( salary ) > ( SELECT MIN( salary ) FROM employees WHERE department_id = 50 );
+
+```
+
+### 列子查询（多行子查询）
+
+- 返回多行
+- 使用多行比较操作符：IN|NOT IN; ANY|SOME;ALL
+
+```mysql
+#列子查询（多行子查询）
+#案例1：查询location_id时1400或1700的部门中的所有员工姓名
+#分析1：查询location_id时1400或1700的部门编号
+SELECT department_id
+FROM departments
+WHERE location_id IN(1400,1700)
+
+#分析2：查询员工姓名，要求部门号是分析1
+SELECT
+	last_name 
+FROM
+	employees 
+WHERE
+	department_id IN ( SELECT department_id FROM departments WHERE location_id IN ( 1400, 1700 ) );
+```
+
+### 行子查询（一行多列）
+
+```mysql
+#行子查询（一行多列）
+#案例1：查询员工编号最小并且工资最高的员工信息
+#分析1：查询最小的员工编号
+SELECT MIN(employee_id)
+FROM employees
+
+#分析2：查询最高工资
+SELECT MAX(salary)
+FROM employees
+
+#分析3：查询员工信息
+SELECT
+	* 
+FROM
+	employees 
+WHERE
+	employee_id = ( SELECT MIN( employee_id ) FROM employees ) 
+	AND salary = ( SELECT MAX( salary ) FROM employees );
+#使用行子查询
+SELECT
+	* 
+FROM
+	employees 
+WHERE
+	( employee_id, salary ) = ( SELECT MIN( employee_id ), MAX( salary ) FROM employees );
+
+```
+
+### select后面
