--- a/MySQL/基础.md
+++ b/MySQL/基础.md
@@ -499,3 +499,26 @@ WHERE
 ```
 
 ### select后面
+
+## 11.分页查询
+
+```mysql
+#语法
+select 查询列表
+from 表1
+join 表2
+where 
+group up
+having
+order by
+limit 起始索引（从0开始）,显示条数
+
+#案例1：查询前五条员工信息
+SELECT * 
+FROM employees
+LIMIT 0,5;
+```
+
+## 12.联合查询
+
+union联合：将多条查询语句的结果合并成一个结果
